# aula11_bootcamp

./: README.md  class.py  encaps.py  exemplo.csv  funcional.py  heranc.py  postgres.py  pyproject.toml  sqlite.py
