[tool.poetry]
name = "aula11-bootcamp"
version = "0.1.0"
description = ""
authors = ["Gustavo Lourenco da Silva <gustavolsilva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
